# KLLP

./: .gitignore  6k Korean words - Página1.csv  6k Korean words.csv  Cargo.toml  README.md
src/: card_maneger.rs  csv_handler.rs  database_maneger.rs  main.rs
