[package]
name = "kllp"
version = "0.1.0"
authors = ["Gabriel Borges Gutierrez <gabriel.bgs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
libsqlite3-sys = "0.22.2"
native-windows-derive = "1.0.4"
native-windows-gui = "1.0.10"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]
